# ic_parent_api

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
src/ic_parent_api/: __init__.py  base.py  ic_api_client.py  ic_user.py  infinite_campus.py  infinitecampus.py
src/ic_parent_api/errors/: __init__.py  ic_error.py
src/ic_parent_api/models/: __init__.py  assignment.py  base.py  course.py  enrollment.py  placement.py  scheduleday.py  student.py  term.py
